fix: Remove overflow of attachment dropzone

--- a/client/src/components/CardModal/AttachmentAddZone/AttachmentAddZone.module.scss
+++ b/client/src/components/CardModal/AttachmentAddZone/AttachmentAddZone.module.scss
@@ -12,8 +12,4 @@
     width: 100%;
     z-index: 2001;
   }
-
-  .wrapper {
-    overflow: hidden;
-  }
 }
